# agos-mcp

./: .gitignore  README.md  install.sh
.github/workflows/: release.yml
.sitecraft/: manifest.json
.sitecraft/agent/: README.md  brain-graph.md
.sitecraft/agent/context/: architecture.md  dashboard-fields.md  data-contracts.md  integrations.md  tech-stack.md
.sitecraft/agent/plugin/.claude-plugin/: plugin.json
.sitecraft/agent/plugin/agents/: site-architect.md
.sitecraft/agent/plugin/commands/: build-site.md  seo-deploy.md  sync-status.md
.sitecraft/agent/plugin/skills/brand-applier/: SKILL.md
.sitecraft/agent/plugin/skills/content-generator/: SKILL.md
.sitecraft/agent/plugin/skills/seo-publisher/: SKILL.md
.sitecraft/agent/plugin/skills/site-scaffolder/: SKILL.md
.sitecraft/agent/plugin/skills/status-tracker/: SKILL.md
.sitecraft/agent/research/: plugin-checklist.md  setup-guide.md
.sitecraft/agent/templates/: AGENTS.template.md  BUILD-STATUS.template.md
.sitecraft/agent/workflow/: 01-bootstrap.md  02-scaffold.md  03-branding.md  04-content.md  05-seo.md  06-verify.md
.sitecraft/config/: branding.json  customer.json
gmail-mcp/: .editorconfig  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  check_err.txt  check_err2.txt  deny.toml  rustfmt.toml
gmail-mcp-server/: 01-repo-bootstrap-and-ci.md  02-mcp-protocol-and-stdio.md  03-oauth-flow-and-token-storage.md  04-gmail-client-and-readonly-tools.md  05-write-tools-send-draft-modify.md  06-filters-batch-attachments.md  07-production-hardening.md  08-http-transport-multi-account.md  09-distribution-and-releases.md  Gmail MCP Server Data Flow.md  Gmail MCP Server Plan.md  Gmail MCP Server Research.md
gmail-mcp/.cargo/: config.toml
gmail-mcp/.github/workflows/: ci.yml  release.yml  security.yml
gmail-mcp/crates/gmail-mcp/: Cargo.toml
gmail-mcp/crates/gmail-mcp-core/: Cargo.toml
gmail-mcp/crates/gmail-mcp-core/src/: audit.rs  lib.rs  ratelimit.rs  retry.rs
gmail-mcp/crates/gmail-mcp-core/src/auth/: account_manager.rs  errors.rs  http_tokens.rs  manager.rs  mod.rs  token.rs
gmail-mcp/crates/gmail-mcp-core/src/auth/oauth/: device.rs  loopback.rs  mod.rs  service_account.rs
gmail-mcp/crates/gmail-mcp-core/src/auth/store/: encrypted_file.rs  keychain.rs  mod.rs
gmail-mcp/crates/gmail-mcp-core/src/gmail/: client.rs  errors.rs  mime.rs  mod.rs  resumable.rs  types.rs
gmail-mcp/crates/gmail-mcp-core/src/mcp/: errors.rs  http.rs  mod.rs  protocol.rs  schema.rs  server.rs  tool.rs  transport.rs
gmail-mcp/crates/gmail-mcp-core/src/tools/: auth.rs  batch.rs  compose.rs  download_attachment.rs  drafts.rs  filters.rs  get_filter.rs  get_profile.rs  get_thread.rs  labels.rs  list_drafts.rs  list_filters.rs  list_labels.rs  mod.rs  modify.rs  read.rs  search.rs  send.rs
gmail-mcp/crates/gmail-mcp-core/tests/: unit_tests.rs
gmail-mcp/crates/gmail-mcp/src/: cli.rs  main.rs
linkedin-auth-broker/: Cargo.toml  Dockerfile  README.md
linkedin-auth-broker/src/: api.rs  config.rs  error.rs  main.rs  oauth.rs  pending.rs  store.rs
linkedin-mcp/: Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  clippy.toml  deny.toml
linkedin-mcp/.github/workflows/: audit.yml  ci.yml
linkedin-mcp/src/: cli.rs  error.rs  lib.rs  main.rs  serve.rs
linkedin-mcp/src/auth/: mod.rs  oauth.rs  refresh.rs  storage.rs  token.rs
linkedin-mcp/src/linkedin/: client.rs  media.rs  mod.rs  types.rs
linkedin-mcp/src/mcp/: mod.rs  ping.rs  server.rs  tools.rs
linkedin-mcp/src/tools/: auth_status.rs  comment_create.rs  comment_delete.rs  comment_list.rs  mod.rs  post_article.rs  post_delete.rs  post_document.rs  post_get.rs  post_image.rs  post_multi_image.rs  post_poll.rs  post_reshare.rs  post_text.rs  post_update.rs  post_video.rs  posts_list.rs  reaction_add.rs  reaction_remove.rs  whoami.rs
linkedin-mcp/tests/: cli_smoke.rs  mcp_ping.rs
