[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
authors = ["AgentOS Team"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/agentos/gmail-mcp"
homepage = "https://github.com/agentos/gmail-mcp"


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "process", "signal", "sync", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
