[package]
name = "linkedin-auth-broker"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
description = "Centralized OAuth broker for the LinkedIn MCP server: holds the client secret and refresh tokens, refreshes centrally, and serves short-lived access tokens to many MCP instances."

[dependencies]
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "query", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
rand = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"
