[package]
name = "linkedin-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
description = "Production-grade LinkedIn MCP server (Model Context Protocol)"
repository = "https://github.com/agentos-project/linkedin-mcp"
readme = "README.md"
keywords = ["mcp", "linkedin", "agent", "oauth"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "fs", "time", "signal", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rmcp = { version = "0.2", features = ["server", "transport-io"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
keyring = "3"
webbrowser = "1"
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "query"] }
time = { version = "0.3", features = ["serde"] }
dirs = "5"
urlencoding = "2"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
