[package]
name = "gmail-mcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait = "0.1"
jsonschema = "0.17"
tracing.workspace = true
keyring = "3"
rand = "0.8"
url = "2"
webbrowser = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
zeroize = { version = "1", features = ["derive"] }
aes-gcm = "0.10"
argon2 = "0.5"
jsonwebtoken = "9"
sha2 = "0.10"
base64 = "0.22"
mime = "0.3"
mail-builder = "0.3"
futures = "0.3"
axum = "0.7"
tokio-stream = "0.1"
humantime = "2.1"
hex = "0.4"





