[package]
name = "gmail-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gmail-mcp"
path = "src/main.rs"

[dependencies]
gmail-mcp-core = { path = "../gmail-mcp-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive", "env"] }
anyhow.workspace = true
dirs = "5"
